--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.9
   go_router: ^15.2.3
+  time_range_picker: ^2.3.0
 
 dev_dependencies:
   flutter_test:
