--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.6.9
   go_router: ^15.2.3
   time_range_picker: ^2.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
