shared_preferences package hinzugefügt und angewendet für den intro.dart screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.20.2
   flutter_native_splash: ^2.4.6
   flutter_launcher_icons: ^0.14.4
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/LogoHabitO.jpeg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -107,3 +110,5 @@ flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/images/IconHabitO.png"
+
+
