--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.9
-  go_router: ^15.2.3
+  flutter_bloc: ^8.1.3
+  go_router: ^16.0.0
   time_range_picker: ^2.3.0
   intl: ^0.20.2
   flutter_native_splash: ^2.4.6
