--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -41,11 +45,13 @@ dependencies:
   flutter_bloc: ^8.1.3
   go_router: ^16.0.0
   time_range_picker: ^2.3.0
-  intl: ^0.20.2
+  intl: ^0.19.0
   flutter_native_splash: ^2.4.6
   flutter_launcher_icons: ^0.14.4
   shared_preferences: ^2.5.3
   http: ^1.4.0
+
+
 
 dev_dependencies:
   flutter_test:
